--- a/src/app.html
+++ b/src/app.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+		<meta title="description" content="Lulu Ilanda's Artist Website" />
+		
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Ysabeau+Infant:wght@1;100&display=swap" rel="stylesheet">
-
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
