--- a/src/app.html
+++ b/src/app.html
@@ -20,6 +20,11 @@
 	body {
 		background-color: black;
 		scroll-behavior: smooth;
-		overflow-x: hidden;
+			height: 100vh;
+			width: 100vw;
+			background-color: black;
+			margin: 0rem;
+			overflow-x: hidden;
+		  
 	}
 </style>
